[project]
name = "pb"
version = "0.1.0"
description = "Bites of info about a project directory"
authors = [
    { name = "Chris Pryer", email = "cnpryer@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
pb = "pb.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.7.0",
    "ruff>=0.0.284",
    "mypy>=1.5.0",
]

[tool.hatch.metadata]
allow-direct-references = true
